my first commit

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>My first github repo</title>
 </head>
 <body>
-    
+    <div>
+        <h1>My first html github push</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias corrupti quibusdam harum, maiores consequatur voluptate nostrum? Quaerat explicabo vel nihil necessitatibus dolore et quasi. Commodi temporibus sunt numquam vel ipsa.</p>
+        <link rel="stylesheet" href="style.css">
+    </div>
 </body>
 </html>
