--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias corrupti quibusdam harum, maiores consequatur voluptate nostrum? Quaerat explicabo vel nihil necessitatibus dolore et quasi. Commodi temporibus sunt numquam vel ipsa.</p>
         <link rel="stylesheet" href="style.css">
     </div>
+    <h1>image</h1>
+    <img src="Pictures - Shortcut/anjana.mo.jpg">
 </body>
 </html>
